--- a/notebooks/week03_priority.ipynb
+++ b/notebooks/week03_priority.ipynb
@@ -240,7 +240,100 @@
         "    - Es steht Ihnen der Scheduler `SrtScheduler` in `/src/week03/ref/scheduler.py` zur Verfügung\n",
         "    - Es steht Ihnen der Simulator `run_simulation_srt` in `/src/week03/sim/simulator.py` zur Verfügung \n",
         "\n",
-        "**Hinweis:** Der Code in `run_simulation_srt` ist nicht vollständig. Sie müssen eine entscheidende Stelle ergänzen!"
+        "**Hinweis:** Der Code in `run_simulation_srt` ist nicht vollständig. Sie müssen eine entscheidende Stelle ergänzen!\n",
+        "- Lesen Sie die Hinweise im Code und versuchen Sie das richtige Verhalten zu implementieren"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "p1 = Process(pid=1, arrival=0.0, burst=50.0, priority=0)\n",
+        "p2 = Process(pid=2, arrival=0.0, burst=4.0, priority=2)\n",
+        "p3 = Process(pid=3, arrival=5.0, burst=5.0, priority=1)\n",
+        "p4 = Process(pid=4, arrival=11.0, burst=3.0, priority=0)\n",
+        "p5 = Process(pid=5, arrival=25.0, burst=30.0, priority=0)\n",
+        "p6 = Process(pid=6, arrival=26.0, burst=13.0, priority=1)\n",
+        "procs = [p1, p2, p3, p4, p5, p6]\n",
+        "\n",
+        "# *****\n",
+        "# Ihr Code ab hier!\n",
+        "# Sind imports erforderlich?\n",
+        "# *****"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Die Ergebnisse visualisieren\n",
+        "\n",
+        "- Die Simulation mit dem instrumentierten Simulator durchführen\n",
+        "- Die Ergebnisse als Gannt-Diagramm darstellen\n",
+        "\n",
+        "Hier benutzen Sie eine instrumentierte Version des SRT-Simulators, die bereits in `/src/week03/ref/simulator.py` verfügbar ist"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from week03.sim.simulator import run_simulation_srt_instrumented\n",
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "p1 = Process(pid=1, arrival=0.0, burst=50.0, priority=0)\n",
+        "p2 = Process(pid=2, arrival=0.0, burst=4.0, priority=2)\n",
+        "p3 = Process(pid=3, arrival=5.0, burst=5.0, priority=1)\n",
+        "p4 = Process(pid=4, arrival=11.0, burst=3.0, priority=0)\n",
+        "p5 = Process(pid=5, arrival=25.0, burst=30.0, priority=0)\n",
+        "p6 = Process(pid=6, arrival=26.0, burst=13.0, priority=1)\n",
+        "procs = [p1, p2, p3, p4, p5, p6]\n",
+        "\n",
+        "# Run the instrumented SRT simulation with a context switch time\n",
+        "res_srt_instrumented = run_simulation_srt_instrumented(None, procs, context_switch_time=0.0, record_cs_segments=True)\n",
+        "res_keys = list(res_srt_instrumented.keys())\n",
+        "print('Result keys:', res_keys)\n",
+        "print('\\nPer-process info:')\n",
+        "for pid, info in sorted(res_srt_instrumented['per_process'].items()):\n",
+        "    print(pid, info)\n",
+        "print('\\nResults (pid, waiting, turnaround, response):')\n",
+        "for r in res_srt_instrumented['results']:\n",
+        "    print(r)\n",
+        "\n",
+        "\n",
+        "# Visualisieren\n",
+        "timeline = res_srt_instrumented['timeline']\n",
+        "pids = sorted({seg[0] for seg in timeline if seg[0] != 'cs'})\n",
+        "ypos = {pid: i for i, pid in enumerate(pids)}\n",
+        "fig, ax = plt.subplots(figsize=(10, 1 + len(pids)*0.6))\n",
+        "cmap = plt.cm.tab10\n",
+        "for seg in timeline:\n",
+        "    if seg[0] == 'cs':\n",
+        "        _, s, e = seg\n",
+        "        ax.broken_barh([(s, e-s)], (-0.4, 0.8), facecolors='lightgray')\n",
+        "    else:\n",
+        "        pid, s, e = seg\n",
+        "        ax.broken_barh([(s, e-s)], (ypos[pid]-0.4, 0.8), facecolors=[cmap(pid % 10)], edgecolor='black')\n",
+        "ax.set_yticks(list(ypos.values()))\n",
+        "ax.set_yticklabels([f'P{pid}' for pid in pids])\n",
+        "ax.set_xlabel('time (s)')\n",
+        "ax.set_title('Gantt: Instrumented SRT')\n",
+        "plt.tight_layout()\n",
+        "plt.show()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Optional\n",
+        "\n",
+        "- Vergleichen Sie RR und SRT\n",
+        "- Erzeugen Sie Gannt-Diagramme für beide Strategien"
       ]
     }
   ],
