--- a/notebooks/week04_run_pcb_demo.ipynb
+++ b/notebooks/week04_run_pcb_demo.ipynb
@@ -47,7 +47,7 @@
     "print('Initial PCB snapshot:', pcb.snapshot())\n",
     "\n",
     "# Simulate dispatch start\n",
-    "from src.sim.pcb_harness import on_dispatch_start, on_dispatch_stop\n",
+    "from week04.sim.pcb_harness import on_dispatch_start, on_dispatch_stop\n",
     "on_dispatch_start(p.pcb)\n",
     "print('After dispatch start:', p.pcb.snapshot())\n",
     "\n",
